--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/material": "^6.1.7",
+    "@mui/styled-engine-sc": "^6.1.7",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
     "lazy": "^1.0.11",
@@ -17,6 +22,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "recoil": "^0.7.7",
+    "styled-components": "^6.1.13",
     "suspense": "^0.0.53"
   },
   "devDependencies": {
